# DoxIn-api

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  env-template  pyproject.toml
app/: __init__.py
app/middleware/: analytics.py
app/models/: __init__.py  access_code.py  access_request.py  account.py  audit_log.py  base.py  company.py  extraction_rule.py  file_storage.py  invoice.py  payment.py  processing.py  processing_job.py  product.py  report.py  salesperson.py  ship_method.py  territory.py  usage_analytics.py  user.py  verification.py
app/routes/: admin.py  auth.py  dashboard.py  health.py  invoices.py  jobs.py  reports.py
app/services/: __init__.py  async_processor.py  llm_service.py  metrics_service.py  redis_event_bridge.py  redis_subscriber.py  report_service.py  websocket_manager.py
app/tasks/: report_tasks.py
app/utils/: __init__.py  audit.py  auth.py  db_init.py  jwt_utils.py  redis_session.py  response.py  routes_helpers.py
scripts/: README.md  load_data.sh  load_excel_data.py  test_advanced_reports.py
