[tool.poetry]
name = "case-study"
version = "0.1.0"
description = "Case Study API for invoice processing"
authors = ["Aaron Feingold"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-cors = "^6.0.1"
flask-socketio = "^5.5.1"
gunicorn = "^23.0.0"
gevent = "^25.9.1"
psycopg2-binary = "^2.9.10"
pgvector = "^0.4.1"
sqlalchemy = "^2.0.43"
celery = "^5.5.3"
flower = "^2.0.1"
redis = "^6.4.0"
openai = "^1.109.1"
pillow = "^11.3.0"
numpy = "^2.3.3"
pandas = "^2.3.2"
requests = "^2.32.5"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
pydantic = "^2.11.9"
structlog = "^25.4.0"
prometheus-client = "^0.23.1"
psutil = "^7.1.0"
pytest = "^8.4.2"
pytest-flask = "^1.3.0"
black = "^25.9.0"
flake8 = "^7.3.0"
pyjwt = "^2.10.1"
openpyxl = "^3.1.5"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
